[metadata]
name = pyphm
author = Awen
author-email = 26896225@qq.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    pyphm


[entry_points]
console_scripts =
    cmd=package.module:function